kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3001

          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 3002

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3003
